--- a/EduAtmo/EduAtmo.csproj
+++ b/EduAtmo/EduAtmo.csproj
@@ -46,19 +46,30 @@
   <ItemGroup>
     <Compile Include="Elements\Mark.cs" />
     <Compile Include="Elements\Answer.cs" />
+    <Compile Include="Elements\Storage.cs" />
     <Compile Include="Elements\Student.cs" />
     <Compile Include="Elements\Subject.cs" />
     <Compile Include="Elements\SubjectProperties.cs" />
     <Compile Include="Elements\Task.cs" />
     <Compile Include="Elements\TaskProperties.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="GUI\StartUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="GUI\StartUp.Designer.cs">
+      <DependentUpon>StartUp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\StartWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\StartWindow.Designer.cs">
+      <DependentUpon>StartWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shell.cs" />
+    <EmbeddedResource Include="GUI\StartWindow.resx">
+      <DependentUpon>StartWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -68,6 +79,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="GUI\StartUp.resx">
+      <DependentUpon>StartUp.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
