--- a/Testo.csproj
+++ b/Testo.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddAnswers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddAnswers.Designer.cs">
+      <DependentUpon>AddAnswers.cs</DependentUpon>
+    </Compile>
     <Compile Include="AnswerClass.cs" />
     <Compile Include="AnswerType.cs" />
     <Compile Include="EditSubject.cs">
@@ -58,6 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubjectClass.cs" />
     <Compile Include="TaskClass.cs" />
+    <EmbeddedResource Include="AddAnswers.resx">
+      <DependentUpon>AddAnswers.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditSubject.resx">
       <DependentUpon>EditSubject.cs</DependentUpon>
     </EmbeddedResource>
