--- a/Testo.csproj
+++ b/Testo.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotNetZip, Version=1.13.3.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
+      <HintPath>packages\DotNetZip.1.13.3\lib\net40\DotNetZip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,7 +53,6 @@
     <Compile Include="AddAnswers.Designer.cs">
       <DependentUpon>AddAnswers.cs</DependentUpon>
     </Compile>
-    <Compile Include="AnswerClass.cs" />
     <Compile Include="AnswerType.cs" />
     <Compile Include="EditSubject.cs">
       <SubType>Form</SubType>
@@ -58,12 +60,14 @@
     <Compile Include="EditSubject.Designer.cs">
       <DependentUpon>EditSubject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\TrashInFolder.cs" />
     <Compile Include="MarkClass.cs" />
     <Compile Include="Mode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubjectClass.cs" />
     <Compile Include="TaskClass.cs" />
+    <Compile Include="TestClass.cs" />
     <EmbeddedResource Include="AddAnswers.resx">
       <DependentUpon>AddAnswers.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +83,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
