--- a/Testo.csproj
+++ b/Testo.csproj
@@ -85,6 +85,12 @@
     </Compile>
     <Compile Include="TaskClass.cs" />
     <Compile Include="TestClass.cs" />
+    <Compile Include="TestIP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestIP.Designer.cs">
+      <DependentUpon>TestIP.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddAnswers.resx">
       <DependentUpon>AddAnswers.cs</DependentUpon>
     </EmbeddedResource>
@@ -105,6 +111,9 @@
     </Compile>
     <EmbeddedResource Include="TaskBuild.resx">
       <DependentUpon>TaskBuild.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestIP.resx">
+      <DependentUpon>TestIP.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
