--- a/Testo/Testo.csproj
+++ b/Testo/Testo.csproj
@@ -34,7 +34,22 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotNetZip, Version=1.13.8.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetZip.1.13.8\lib\net40\DotNetZip.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Design, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
+    </Reference>
     <Reference Include="SVG, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SvgNet.2.0.3\lib\net40\SVG.dll</HintPath>
     </Reference>
@@ -52,19 +67,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Answer.cs" />
     <Compile Include="Classes\DefaultMessages.cs" />
+    <Compile Include="Classes\Mark.cs" />
+    <Compile Include="Classes\Provider.cs" />
+    <Compile Include="Classes\Subject.cs" />
+    <Compile Include="Classes\Task.cs" />
+    <Compile Include="Classes\TaskType.cs" />
     <Compile Include="Classes\Teacher.cs" />
-    <Compile Include="Forms\About.cs">
+    <Compile Include="Forms\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\About.Designer.cs">
-      <DependentUpon>About.cs</DependentUpon>
+    <Compile Include="Forms\AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FirstStart.cs">
+    <Compile Include="Forms\Components\ButtonSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Components\ButtonSelector.Designer.cs">
+      <DependentUpon>ButtonSelector.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SetUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FirstStart.Designer.cs">
-      <DependentUpon>FirstStart.cs</DependentUpon>
+    <Compile Include="Forms\SetUp.Designer.cs">
+      <DependentUpon>SetUp.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\NoProfilesForm.cs">
       <SubType>Form</SubType>
@@ -72,23 +99,23 @@
     <Compile Include="Forms\NoProfilesForm.Designer.cs">
       <DependentUpon>NoProfilesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\NoUACConfirmation.cs">
+    <Compile Include="Forms\NoUACConfirmationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\NoUACConfirmation.Designer.cs">
-      <DependentUpon>NoUACConfirmation.cs</DependentUpon>
+    <Compile Include="Forms\NoUACConfirmationForm.Designer.cs">
+      <DependentUpon>NoUACConfirmationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Security.cs">
+    <Compile Include="Forms\SecurityForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Security.Designer.cs">
-      <DependentUpon>Security.cs</DependentUpon>
+    <Compile Include="Forms\SecurityForm.Designer.cs">
+      <DependentUpon>SecurityForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Setings.cs">
+    <Compile Include="Forms\SetingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Setings.Designer.cs">
-      <DependentUpon>Setings.cs</DependentUpon>
+    <Compile Include="Forms\SetingsForm.Designer.cs">
+      <DependentUpon>SetingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\SetingsPages\EditSub.cs">
       <SubType>UserControl</SubType>
@@ -108,37 +135,52 @@
     <Compile Include="Forms\SetingsPages\SetingsPanel.Designer.cs">
       <DependentUpon>SetingsPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SetingsPages\TaskEditPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\SetingsPages\TaskEditPage.Designer.cs">
+      <DependentUpon>TaskEditPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SetingsPages\TasksSettingsPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\SetingsPages\TasksSettingsPanel.Designer.cs">
       <DependentUpon>TasksSettingsPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Start.cs">
+    <Compile Include="Forms\StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Start.Designer.cs">
-      <DependentUpon>Start.cs</DependentUpon>
+    <Compile Include="Forms\StartForm.Designer.cs">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EditSubjectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditSubjectForm.Designer.cs">
+      <DependentUpon>EditSubjectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\About.resx">
-      <DependentUpon>About.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FirstStart.resx">
-      <DependentUpon>FirstStart.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Components\ButtonSelector.resx">
+      <DependentUpon>ButtonSelector.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SetUp.resx">
+      <DependentUpon>SetUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NoProfilesForm.resx">
       <DependentUpon>NoProfilesForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\NoUACConfirmation.resx">
-      <DependentUpon>NoUACConfirmation.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\NoUACConfirmationForm.resx">
+      <DependentUpon>NoUACConfirmationForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Security.resx">
-      <DependentUpon>Security.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\SecurityForm.resx">
+      <DependentUpon>SecurityForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Setings.resx">
-      <DependentUpon>Setings.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\SetingsForm.resx">
+      <DependentUpon>SetingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetingsPages\EditSub.resx">
       <DependentUpon>EditSub.cs</DependentUpon>
@@ -149,11 +191,17 @@
     <EmbeddedResource Include="Forms\SetingsPages\SetingsPanel.resx">
       <DependentUpon>SetingsPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SetingsPages\TaskEditPage.resx">
+      <DependentUpon>TaskEditPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetingsPages\TasksSettingsPanel.resx">
       <DependentUpon>TasksSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Start.resx">
-      <DependentUpon>Start.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\StartForm.resx">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditSubjectForm.resx">
+      <DependentUpon>EditSubjectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -186,24 +234,35 @@
     <None Include="imgs\settings.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Icon.ico" />
     <Content Include="imgs\arrow-left.png" />
     <Content Include="imgs\briefcase.png" />
     <Content Include="imgs\calendar.png" />
+    <None Include="Resources\Check.png" />
+    <None Include="Resources\Alert.png" />
+    <None Include="Resources\BD.png" />
+    <None Include="Resources\Login2.png" />
+    <None Include="Resources\Без имени-2.png" />
+    <None Include="Resources\Login1.png" />
+    <None Include="Resources\Login.png" />
+    <None Include="Resources\shield1.png" />
+    <None Include="Resources\shield.png" />
+    <None Include="imgs\code.png" />
     <Content Include="imgs\database.png" />
     <Content Include="imgs\edit.png" />
     <Content Include="imgs\edit_dark.png" />
     <Content Include="imgs\log-out.png" />
+    <None Include="imgs\marks.png" />
+    <None Include="imgs\plus.png" />
     <Content Include="imgs\trending-up.png" />
     <Content Include="imgs\users.png" />
-    <None Include="Resources\StatusSecurityWarning_16x.png" />
+    <None Include="imgs\StatusSecurityWarning_16x.png" />
     <None Include="imgs\StatusOK_16x.png" />
     <None Include="imgs\StatusWarning_16x.png" />
     <None Include="imgs\FileExclude_16x1.png" />
     <None Include="imgs\FileExclude_16x.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Forms\Components\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
