--- a/Testo/packages.config
+++ b/Testo/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Avalonia" version="0.8.2" targetFramework="net40" />
+  <package id="DotNetZip" version="1.13.8" targetFramework="net40" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net40" />
   <package id="SvgNet" version="2.0.3" targetFramework="net40" />
 </packages>
